cmake_minimum_required(VERSION 3.10)
project(SystemScheduler LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
if(APPLE)
    set(OS_DEFINES -D__APPLE__)
endif()
set(SOURCE_FILES system_scheduler.cpp)
set(HEADER_FILES system_scheduler.hpp)
add_library(SystemScheduler STATIC ${SOURCE_FILES} ${HEADER_FILES})
if(APPLE)
    target_link_options(SystemScheduler PRIVATE "-Wl,-framework,CoreFoundation")
endif()
target_compile_definitions(SystemScheduler PRIVATE ${OS_DEFINES})
target_include_directories(SystemScheduler PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB EXECUTABLE_SOURCES "*.cpp")
list(REMOVE_ITEM EXECUTABLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/system_scheduler.cpp")
foreach(EXEC_FILE ${EXECUTABLE_SOURCES})
    get_filename_component(EXEC_NAME ${EXEC_FILE} NAME_WE)
    add_executable(${EXEC_NAME} ${EXEC_FILE})
    target_link_libraries(${EXEC_NAME} PRIVATE SystemScheduler)
    message(STATUS "Added executable: ${EXEC_NAME}")
endforeach()
message(STATUS "SystemScheduler project configured for ${CMAKE_SYSTEM_NAME}")